--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@ function displ(loadMore) {
 .name{    
     text-transform: capitalize;
     color: red;
+    width: auto;
+    height: auto;
+    position: relative;
+    float: none;
+    text-align: center;
 }
 
  #LoadMore{
@@ -429,30 +434,29 @@ function displ(loadMore) {
    float: left;
  }
   
+
 </style>
 
 
 </head>
 <body>
 
-<div class="backgroundColor">
+<div class="backgroundColor"></div>
 
 <div class="pokedexHead">Pokedex</div>
 <div class="pokemonImage"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/English_Pok%C3%A9mon_logo.svg/2000px-English_Pok%C3%A9mon_logo.svg.png" alt="image" width="250" height="100"></div>  
 
-<div class="grid">
+<div class="grid"></div>
     <div class="column">
-       <div id="rectangle1" class="rectangle pokemon">
-       <img src="http://pokeapi.co/media/img/1.png" width="100" height="100">
-       <div class="name" align="center"></div>
+       <div id="rectangle1" class="rectangle pokemon"><img src="http://pokeapi.co/media/img/1.png" width="100" height="100">
+       <div class="name"></div>
        <div class="hidden-info"></div>
-       <div class="abilities" id="ability-1">
+       <div class="abilities" id="ability-1"></div>
     </div>
-</div>
 
 <div id="rectangle2" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/2.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-2">
     </div>
@@ -460,7 +464,7 @@ function displ(loadMore) {
 
 <div id="rectangle3" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/3.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-3">
     </div>
@@ -468,7 +472,7 @@ function displ(loadMore) {
 
 <div id="rectangle4" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/4.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-4">
     </div>
@@ -476,7 +480,7 @@ function displ(loadMore) {
 
 <div id="rectangle5" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/5.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-5">
      </div>
@@ -484,7 +488,7 @@ function displ(loadMore) {
 
 <div id="rectangle6" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/6.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-6">
     </div>
@@ -492,7 +496,7 @@ function displ(loadMore) {
 
 <div id="rectangle7" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/7.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-7">
      </div>
@@ -500,7 +504,7 @@ function displ(loadMore) {
 
 <div id="rectangle8" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/8.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-8">
     </div>
@@ -508,7 +512,7 @@ function displ(loadMore) {
 
 <div id="rectangle9" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/9.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-9">
     </div>
@@ -516,7 +520,7 @@ function displ(loadMore) {
 
 <div id="rectangle10" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/10.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-10">
     </div>
@@ -524,7 +528,7 @@ function displ(loadMore) {
 
 <div id="rectangle11" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/11.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-11">
       </div>
@@ -532,7 +536,7 @@ function displ(loadMore) {
 
 <div id="rectangle12" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/12.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-12">
     </div>
@@ -540,7 +544,7 @@ function displ(loadMore) {
 
 <div id="rectangle13" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/13.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-13">
     </div>
@@ -548,7 +552,7 @@ function displ(loadMore) {
 
 <div id="rectangle14" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/14.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-14">
     </div>
@@ -556,7 +560,7 @@ function displ(loadMore) {
 </div>
 <div id="rectangle15" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/15.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-15">
    </div>
@@ -564,7 +568,7 @@ function displ(loadMore) {
 
 <div id="rectangle16" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/16.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-16">
     </div>
@@ -572,7 +576,7 @@ function displ(loadMore) {
 
 <div id="rectangle17" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/17.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-17">
     </div>
@@ -580,7 +584,7 @@ function displ(loadMore) {
 
 <div id="rectangle18" class="rectangle pokemon">
 <img src="http://pokeapi.co/media/img/18.png" width="100" height="100" alt="pokemon.picture">
-<div class="name" align="center"></div>
+<div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-18">
     </div>
