site validator test 2

--- a/index.html
+++ b/index.html
@@ -444,18 +444,18 @@ function displ(loadMore) {
 <div class="backgroundColor"></div>
 
 <div class="pokedexHead">Pokedex</div>
-<div class="pokemonImage"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/English_Pok%C3%A9mon_logo.svg/2000px-English_Pok%C3%A9mon_logo.svg.png" alt="image" width="250" height="100"></div>  
+<div class="pokemonImage"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/English_Pok%C3%A9mon_logo.svg/2000px-English_Pok%C3%A9mon_logo.svg.png" alt="pokemon picture" width="250" height="100"></div>  
 
 <div class="grid"></div>
     <div class="column">
-       <div id="rectangle1" class="rectangle pokemon"><img src="http://pokeapi.co/media/img/1.png" width="100" height="100">
+       <div id="rectangle1" class="rectangle pokemon"><img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture" width="100" height="100">
        <div class="name"></div>
        <div class="hidden-info"></div>
        <div class="abilities" id="ability-1"></div>
     </div>
 
 <div id="rectangle2" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/2.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/2.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-2">
@@ -463,7 +463,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle3" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/3.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/3.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-3">
@@ -471,7 +471,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle4" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/4.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/4.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-4">
@@ -479,7 +479,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle5" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/5.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/5.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-5">
@@ -487,7 +487,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle6" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/6.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/6.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-6">
@@ -495,7 +495,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle7" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/7.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/7.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-7">
@@ -503,7 +503,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle8" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/8.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/8.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-8">
@@ -511,7 +511,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle9" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/9.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/9.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-9">
@@ -519,7 +519,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle10" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/10.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/10.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-10">
@@ -527,7 +527,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle11" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/11.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/11.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-11">
@@ -535,7 +535,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle12" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/12.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/12.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-12">
@@ -543,7 +543,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle13" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/13.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/13.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-13">
@@ -551,7 +551,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle14" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/14.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/14.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-14">
@@ -559,7 +559,7 @@ function displ(loadMore) {
 
 </div>
 <div id="rectangle15" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/15.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/15.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-15">
@@ -567,7 +567,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle16" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/16.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/16.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-16">
@@ -575,7 +575,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle17" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/17.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/17.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-17">
@@ -583,7 +583,7 @@ function displ(loadMore) {
 </div>
 
 <div id="rectangle18" class="rectangle pokemon">
-<img src="http://pokeapi.co/media/img/18.png" width="100" height="100" alt="pokemon.picture">
+<img src="http://pokeapi.co/media/img/18.png" width="100" height="100" alt="pokemon picture">
 <div class="name"></div>
 <div class="hidden-info"></div>
 <div class="abilities" id="ability-18">
