--- a/index.html
+++ b/index.html
@@ -185,60 +185,24 @@ function displ(loadMore) {
   margin: 4px 2px;
   cursor: pointer;
 }
-.electric {
-  background-color: #FFFF00;
-}
-.poison {
-  background-color: #9900FF;
-}
-.grass {
-  background-color: #33FF00;
-}
-.fire {
-  background-color: #FF3300;
-}
-.bug {
-  background-color: #CC9900;
-}
-.water {
-  background-color: #003399;
-}
-.flying {
-  background-color: #CC0000;
-}
-.normal {
-  background-color: #FFFF99;
-}
-.fighting {
-  background-color: #C03028;
-} 
-.ground {
-  background-color: #C03028;
-}
-.fairy {
-  background-color: #C03028;
-}
-.rock {
-  background-color: #FFFF00;
-}
-.ghost {
-  background-color: #9900FF;
-}
-.steel {
-  background-color: #33FF00;
-}
-.psychic {
-  background-color: #FF3300;
-}
-.ice {
-  background-color: #CC9900;
-}
-.dragon {
-  background-color: #CC9900;
-}
-.dark {
-  background-color: #003399;
-}
+.electric { background-color: #FFFF00; }
+.poison { background-color: #9900FF; }
+.grass { background-color: #33FF00; }
+.fire { background-color: #FF3300; }
+.bug { background-color: #CC9900; }
+.water { background-color: #003399; }
+.flying { background-color: #CC0000; }
+.normal { background-color: #FFFF99; }
+.fighting { background-color: #C03028; }
+.ground { background-color: #C03028; }
+.fairy { background-color: #C03028; }
+.rock { background-color: #FFFF00; }
+.ghost { background-color: #9900FF; }
+.steel { background-color: #33FF00; }
+.psychic { background-color: #FF3300; }
+.ice { background-color: #CC9900; }
+.dragon { background-color: #CC9900; }
+.dark { background-color: #003399; }
 
 /*Pokemon info in table right */
 #rectangle-profile {
