extract css and js to separate files

--- a/index.html
+++ b/index.html
@@ -1,231 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <title>Pokemon</title>
+  <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="javascripts/pokemon.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/pokemon.css">
 
- <script type="text/javascript">
-var displayedType = '';
-
-$(document).ready(function() {
-
-  $(".pokemon").click(renderProfile)
-
-  $(document).on('click', '.abilities div', function(event) {
-    var currentType = $(event.target).html()
-    if (displayedType == currentType) {
-      $('.rectangle').show()
-      displayedType = ''
-    } else {
-      $('.rectangle').hide()
-      $('.' + currentType).parents('.rectangle').show()
-      displayedType = currentType
-    }
-  })
-});
-
-var renderProfile = function(event) {
-  $("#rectangle-profile").html($(event.target).children(".hidden-info").html()).show();
-}
-
-var statisticRow = function(label, value) {
-  resalt = '<tr><td class="key">' + label +
-    '</td><td class="value">' + value +
-    '</td></tr>'
-  return resalt;
-}
-
-var parseData = function(d) {
-  var currentInfo = {}
-  currentInfo.name = d.name
-  currentInfo.weight = d.weight
-  currentInfo.types = []
-  for (var i = 0; i < d.types.length; i++) {
-    currentInfo.types[i] = d.types[i].type.name
-  }
-  currentInfo.totalMoves = d.moves.length
-  for (var i = 0; i < d.stats.length; i++) {
-    currentInfo[d.stats[i].stat.name] = d.stats[i].base_stat
-  }
-  return currentInfo;
-}
-
-var renderPokemonFromAPI = function(id) {
-  $.get("http://pokeapi.co/api/v2/pokemon/" + id, function(data) {
-    $("#rectangle" + data.id + " .name").html(data.name);
-    currentInfo = parseData(data)
-    var profileImage = '<img src="http://pokeapi.co/media/img/' + data.id + '.png" alt="pokemon picture"><div>'
-    var profileTable = '</div><table>' + statisticRow('Type', currentInfo.types[0]) + statisticRow('Attack', currentInfo.attack) + statisticRow('Defense', currentInfo.defense) + statisticRow('HP', currentInfo.hp) + statisticRow('SP Attack', currentInfo['special-attack']) + statisticRow('SP Defense', currentInfo['special-defense']) + statisticRow('Speed', currentInfo.speed) + statisticRow('Weight', currentInfo.weight) + statisticRow('Total moves', currentInfo.totalMoves) + '</table>'
-    $("#rectangle" + data.id + " .hidden-info").html(profileImage + data.name + "#" + data.id + profileTable);
-    $(".pokemon").click(renderProfile)
-    for (var y = 0; y < data.types.length; y++) {
-      data.types[y].type.name
-      prefContent = $("#ability-" + (data.id)).html()
-      typeContent = prefContent + "<div class=\"" + data.types[y].type.name + " type\">" + data.types[y].type.name + "</div>"
-      $("#ability-" + (data.id)).html(typeContent);
-    };
-  });
-};
-
-var newDivsStart = '<div id="rectangle'
-var newDivsImage = '" class="rectangle pokemon"><img src="http://pokeapi.co/media/img/'
-var newDivsTypes = '.png" alt="pokemon picture" width="100" height="100"><div class="name"></div><div class="abilities" id="ability-'
-var newDivsEnd = '"></div><div class="hidden-info"></div></div>'
-
-function displ(loadMore) {
-  var visiblePokemonsCount = $('.rectangle').length;
-  for (var i = visiblePokemonsCount; i < (visiblePokemonsCount + 3); i++) {
-    $('#rectangle' + i).after(newDivsStart + (i + 1) + newDivsImage + (i + 1) + newDivsTypes + (i + 1) + newDivsEnd)
-    renderPokemonFromAPI(i + 1)
-  }
-}
-</script>
-
-<style>
-/*layout*/
-.grid:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.column {
-  width: 50%;
-  float: left;
-}
-.pokedexHead {
-  border: 2px solid #945BE9;
-  background-color: #FFC628;
-  font-family: Verdana, sans-serif;
-  margin-top: 20px;
-  margin-bottom: 50px;
-  margin-right: 150px;
-  margin-left: 150px;
-  padding-top: 5px;
-  padding-right: 10px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  text-align: center;
-  font-size: 50px; 
-  border-radius: 2px;
-}
-.pokemonImage {
-  margin:10px 450px 10px 450px;   
-  padding: 3px 10px 3px 10px;
-  text-align: center;  
-}
-#LoadMore {
-  padding: 20px;
-  border: 1px solid #945BE9;
-  text-align: center;
-  margin: 10px 30px 10px 145px; 
-  padding: 10px 20px 10px 20px;  
-  height: 20px;
-  width: 220px;
-  border-radius: 12px;
-  background-color:#FFC628;
-  box-shadow: 2px 2px 2px #888888;
-}
-
-/*form with a Pokemon*/
-.rectangle {
-  padding: 30px;
-  border: 2px solid #945BE9;
-  display: inline-block;
-  margin: 10px;
-  height:160px;
-  width: 110px;
-  border-radius: 12px;
-  background-color:#FFC628;
-  box-shadow: 2px 2px 2px #888888;
-}
-.hidden-info {
-  display: none;
-}
-.backgroundColor {    
-  background-color:#FFDB0F;
-}
-.name {    
-  text-transform: capitalize;
-  color: red;
-  width: auto;
-  height: auto;
-  position: relative;
-  float: none;
-  text-align: center;
-}
-.abilities {
-  content: "";
-  clear: both;
-  display: table;
-  margin: 10px 0px 0 2px;
-}
-.type {
-  border: none;
-  color: black;
-  padding: 5px 5px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-.electric { background-color: #FFFF00; }
-.poison { background-color: #9900FF; }
-.grass { background-color: #33FF00; }
-.fire { background-color: #FF3300; }
-.bug { background-color: #CC9900; }
-.water { background-color: #003399; }
-.flying { background-color: #CC0000; }
-.normal { background-color: #FFFF99; }
-.fighting { background-color: #C03028; }
-.ground { background-color: #C03028; }
-.fairy { background-color: #C03028; }
-.rock { background-color: #FFFF00; }
-.ghost { background-color: #9900FF; }
-.steel { background-color: #33FF00; }
-.psychic { background-color: #FF3300; }
-.ice { background-color: #CC9900; }
-.dragon { background-color: #CC9900; }
-.dark { background-color: #003399; }
-
-/*Pokemon info in table right */
-#rectangle-profile {
-  border: 2px solid #945BE9;
-  position: fixed;
-  width: 220px;
-  height: 380px;
-  background-color: #FFC628;
-  top: 272px;
-  border-radius: 12px;
-  box-shadow: 2px 2px 2px #888888;
-  display: none;
-}
-#rectangle-profile table {
-  border: 1px solid black;
-  width: 100%;
-}
-#rectangle-profile table td{
-  border: 1px solid black;
-}
-#rectangle-profile table td.key {
-  color: red;
-}
-#rectangle-profile table td.value {
-  color: blue;
-}
-.pokemonProfile {    
-  width: 50%;
-  min-height: 150px;
-  float: left;
-  color: blue;
-  text-align: center;
-  text-transform: capitalize;
-}
-</style>
-
-
-</head>
+    <title>Pokemon</title>
+  </head>
   <body>
 
     <div class="backgroundColor"></div>
